[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qstoregym"
version = "2.0.0"
description = "Q-Store dark store Operations Simulator for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name="Q-Store Team" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "stable-baselines3",
    "openai",
    "python-dotenv",
    "gymnasium",
    "numpy",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
